--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,17 +3,16 @@ spring.application.name=charger
 # ===============================
 # = Spring DATASOURCE (MySQL)   =
 # ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/evdatabase?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/evdatabase?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ===============================
-# = JPA / Hibernate              =
-# ===============================
-spring.jpa.hibernate.ddl-auto=update   
-spring.jpa.show-sql=true               
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 # Optional: Logging level
 logging.level.org.hibernate.SQL=DEBUG
@@ -35,3 +34,5 @@ management.endpoints.web.exposure.include=*
 # Prometheus config
 management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
+
+logging.level.org.springframework.boot.autoconfigure=ERROR
